--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,12 +1,14 @@
 Package: swimR
-Title: What the Package Does (one line, title case)
+Title: Gather College Swimming Results From USA Swimming Top Time Reports
 Version: 0.0.0.9000
 Authors@R: person('Sean', 'Warlick', email = 'warlick.sean@gmail.com',
     role = c("aut", "cre"))
-Description: What the package does (one paragraph).
+Description: swimR is a package that facilitates automated collection of college swimming results from USA Swimming's top times reports.  In addition it assists the user in cleaning the returned report and storing the report in a database if desired.  The package requires a standalone Selenium Server. 
 Depends:
     R (>= 3.3.0)
 License: MIT + file LICENSE
+URL: https://github.com/warlicks/swimming_app
+BugReports: https://github.com/warlicks/swimming_app/issues
 Encoding: UTF-8
 LazyData: true
 RoxygenNote: 5.0.1
