start_selenium now has argument for file directory containing the selenium server.  Also documented the function.

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -4,6 +4,7 @@ export(clean_swim)
 export(get_conferences)
 export(individual_swims)
 export(report_top_times)
+export(start_selenium)
 export(swim_db_data_load)
 export(swim_db_tables)
 importFrom(magrittr,"%>%")
